load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_library")

cue_library(
    name = "cue_cert_manager_library",
    srcs = [
        "cluster_role.cue",
        "cluster_role_binding.cue",
        "custom_resource_definition.cue",
        "deployment.cue",
        "list.cue",
        "mutating_webhook_configuration.cue",
        "namespace.cue",
        "role.cue",
        "role_binding.cue",
        "service.cue",
        "service_account.cue",
        "validating_webhook_configuration.cue",
    ],
    importpath = "github.com/uhthomas/automata/clusters/mahalo/cert_manager",
    visibility = ["//visibility:public"],
    deps = [
        "//cue.mod/gen/k8s.io/api/admissionregistration/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/api/apps/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/api/rbac/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1:cue_v1_library",
    ],
)
