load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_library")

cue_library(
    name = "cue_kipp_dev_library",
    srcs = [
        "deployment.cue",
        "horizontal_pod_autoscaler.cue",
        "ingress.cue",
        "list.cue",
        "namespace.cue",
        "network_policy.cue",
        "sealed_secret.cue",
        "service.cue",
    ],
    importpath = "github.com/uhthomas/automata/clusters/mahalo/kipp_dev",
    visibility = ["//visibility:public"],
    deps = [
        "//cue.mod/gen/k8s.io/api/apps/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/api/autoscaling/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/api/networking/v1:cue_v1_library",
    ],
)
