load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_library")

cue_library(
    name = "cue_kube_state_metrics_library",
    srcs = [
        "cluster_role.cue",
        "cluster_role_binding.cue",
        "deployment.cue",
        "list.cue",
        "namespace.cue",
        "service_account.cue",
    ],
    importpath = "github.com/uhthomas/automata/clusters/mahalo/kube_state_metrics",
    visibility = ["//visibility:public"],
    deps = [
        "//cue.mod/gen/k8s.io/api/apps/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/api/rbac/v1:cue_v1_library",
    ],
)
