load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_library")

cue_library(
    name = "cue_oauth2_proxy_library",
    srcs = [
        "deployment.cue",
        "horizontal_pod_autoscaler.cue",
        "list.cue",
        "namespace.cue",
        "sealed_secret.cue",
        "service.cue",
    ],
    importpath = "github.com/uhthomas/automata/clusters/mahalo/oauth2_proxy",
    visibility = ["//visibility:public"],
    deps = [
        "//cue.mod/gen/k8s.io/api/apps/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/api/autoscaling/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
    ],
)
